--- a/store/blocks/default.jsonc
+++ b/store/blocks/default.jsonc
@@ -29,8 +29,7 @@
       "product-summary-name",
       "product-rating-inline",
       "product-summary-space",
-      "product-summary-price",
-      "product-summary-buy-button"
+      "product-summary-price"
     ]
   }
 }
