--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
     "eslint-config-vtex": "^12.4.0",
     "prettier": "^2.0.5",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "global": "^4.4.0",
+    "to": "^0.2.9",
+    "update": "^0.7.4",
+    "vtex": "^2.99.1"
   }
 }
